# vibe-othello-2

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md
engine/: CMakeLists.txt  README.md
engine/benchmarks/: CMakeLists.txt  README.md  board_core_bench.cc  endgame_bench.cc  evaluation_bench.cc  search_bench.cc
engine/benchmarks/baselines/: README.md
engine/fixtures/endgame/: positions.tsv
engine/fixtures/search/: positions.tsv
engine/include/vibe_othello/: version.h
engine/src/: version.cc
engine/src/board_core/: bit_ops.h  board.cc  directions.h  flips.cc  hash.cc  move_application.cc  move_generation.cc  serialization.cc
engine/src/evaluation/: early_midgame_heuristic_evaluator.cc  pattern.cc  pattern_artifact.cc  pattern_evaluator.cc  pattern_weights.cc  phase_aware_evaluator.cc  tiny_pattern_evaluator.cc
engine/src/search/: alphabeta.cc  best_move_table.cc  endgame.cc  endgame_context_internal.h  endgame_policy_internal.h  endgame_root.cc  endgame_search.cc  endgame_small_empty.cc  endgame_stability.cc  endgame_stability_internal.h  endgame_tt.cc  endgame_tt_internal.h  move_ordering.cc  move_ordering_internal.h  negamax.cc  probcut.cc  probcut_internal.h  production_probcut.cc  production_probcut_profile_data.inc  pvs.cc  result_builder_internal.cc  result_builder_internal.h  root_search.cc  search_context_internal.h  search_internal.h  search_limits_internal.h  search_node_common.cc  search_node_internal.h  search_options.cc  search_options_internal.h  search_position_internal.h  search_session.cc  search_session_internal.h  search_util.cc  search_util_internal.h  shadow_calibration.cc  shadow_calibration_internal.h  transposition_table.cc  transposition_table_internal.h
engine/test_support/board_core/: corpus.h  perft.h  reference_board.cc  reference_board.h
engine/test_support/search/: endgame_positions.cc  reference_endgame.h  reference_search.cc  reference_search.h
engine/testdata/endgame/: positions.tsv
engine/tests/: CMakeLists.txt  README.md
engine/tests/board_core/: apply_undo_test.cc  board_test.cc  coordinates_test.cc  corpus_test.cc  differential_test.cc  flip_test.cc  hash_test.cc  move_generation_test.cc  pass_terminal_test.cc  perft_test.cc  position_test.cc  property_test.cc  random_play_differential_test.cc  serialization_test.cc
engine/tests/evaluation/: early_midgame_heuristic_evaluator_test.cc  incremental_pattern_evaluator_test.cc  pattern_artifact_test.cc  pattern_evaluator_test.cc  pattern_schema_test.cc  pattern_weights_test.cc  phase_aware_evaluator_test.cc  tiny_pattern_evaluator_test.cc
engine/tests/search/: alphabeta_test.cc  endgame_corpus_test.cc  endgame_reference_test.cc  endgame_root_move_differential_test.cc  endgame_small_empty_test.cc  endgame_stability_test.cc  endgame_test.cc  iterative_search_test.cc  move_ordering_test.cc  negamax_test.cc  null_window_search_test.cc  probcut_test.cc  production_probcut_test.cc  pvs_test.cc  reference_search_test.cc  search_limits_test.cc  search_options_test.cc  search_result_invariant_test.cc  search_session_test.cc  shadow_calibration_test.cc  transposition_table_test.cc
tools/arena/: CMakeLists.txt  README.md  arena_core.cc  arena_core.h  arena_core_test.cc  check_fixed_time_artifact_strength_campaign_smoke.py  check_fixed_time_artifact_strength_decision.py  check_full_game_artifact_arena_smoke.py  check_independent_opening_generator_smoke.py  check_nboard_match_smoke.py  check_pattern_artifact_arena_matrix_smoke.py  check_pattern_artifact_arena_smoke.py  fake_nboard_engine.cc  full_game_artifact_arena.cc  full_game_artifact_arena_core.cc  full_game_artifact_arena_core.h  full_game_artifact_arena_core_test.cc  generate_independent_openings.cc  main.cc  nboard_match.cc  nboard_protocol.cc  nboard_protocol.h  nboard_protocol_test.cc  nboard_session.cc  nboard_session.h  nboard_session_test.cc  pattern_artifact_arena.cc  persistent_process.cc  persistent_process.h  persistent_process_test.cc  run_fixed_time_artifact_strength_campaign.py  run_full_game_artifact_arena_sanity.py  run_multi_probcut_strength_campaign.py  run_pattern_artifact_arena_matrix.py  test_multi_probcut_strength_campaign.py
tools/arena/openings/: smoke.txt
tools/data-import/: CMakeLists.txt  README.md  audit_egaroucid_board_score_openings.py  audit_wthor_openings.py  check_egaroucid_board_score_opening_overlap_smoke.py  check_egaroucid_board_score_smoke.py  check_egaroucid_sequence_smoke.py  check_egaroucid_smoke.py  check_wthor_import_smoke.py  check_wthor_opening_overlap_smoke.py  egaroucid_sequence_replay.cc  egaroucid_sequence_replay.h  egaroucid_sequence_replay_main.cc  import_egaroucid_board_scores.py  import_egaroucid_sequences.py  import_egaroucid_train_data.py  import_wthor.py  main.cc  replay_records.cc  replay_records.h  sequence_replay.cc  sequence_replay.h  sequence_replay_cli.h  wthor_sequence_replay_main.cc
tools/data-policy/: CMakeLists.txt  validate_dataset_manifest.py
tools/engine-cli/: CMakeLists.txt  check_smoke.py  main.cc
tools/pattern-export/: CMakeLists.txt  check_smoke.py  main.cc
tools/pattern-train/: CMakeLists.txt  main.cc
tools/pattern/artifacts/: CMakeLists.txt  check_eval_artifact_commit_policy.py  check_eval_artifact_commit_policy_smoke.py
tools/pattern/common/: CMakeLists.txt  check_boundary.py  index_mode.cc  index_mode.h  normalized_tsv.cc  normalized_tsv.h  (+9 more)
tools/search-calibration/: CMakeLists.txt  README.md  analyze_shadow_samples.py  collect_shadow_samples.cc  convert_probcut_profile.py  export_probcut_profile_cpp.py  filter_disjoint_shadow_samples.py  run_wasm_probcut_speed_gate.mjs  test_analyze_shadow_samples.py  test_collect_shadow_samples.py  test_convert_probcut_profile.py  test_export_probcut_profile_cpp.py  test_filter_disjoint_shadow_samples.py  test_multi_probcut_pipeline_e2e.py
wasm/: CMakeLists.txt  README.md
wasm/js/: wasmCore.mjs
wasm/smoke/: check_wasm_core.mjs  check_wasm_module.mjs
wasm/src/: search_preset_internal.h  wasm_api.cc  wasm_module.cc
wasm/tests/: CMakeLists.txt  wasm_api_tests.cc
(+284 files in other folders)
